// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kjnYYX {
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 2px solid var(--colors-tonal100);
    background-color: var(--colors-white);
  }

  .c-kjnYYX:not([disabled]):hover {
    border-color: var(--colors-tonal400);
    background-color: var(--colors-tonal50);
  }

  .c-kjnYYX:not([disabled]):active {
    border-color: var(--colors-primary);
    background-color: var(--colors-tonal100);
  }

  .c-kjnYYX:focus {
    box-shadow: 0px 0px 0px 3px #1D6FF5, 0px 0px 0px 2px #FFFFFF;
  }

  .c-kjnYYX[disabled] {
    opacity: 30%;
  }

  .c-kjnYYX {
    overflow: hidden;
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-kjnYYX-cLvQgi-size-lg {
    font-size: var(--fontSizes-md);
    height: var(--sizes-5);
    width: var(--sizes-5);
  }
}

@media  {
  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }
}

<div>
  <div
    class="c-dhzjXW c-kjnYYX c-kjnYYX-cLvQgi-size-lg c-dhzjXW-idGcKFW-css"
  >
    <img
      alt="a name's avatar"
      src="path-to-image"
      width="100%"
    />
  </div>
</div>
`;

exports[`Avatar component renders an icon instead of an image 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kjnYYX {
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 2px solid var(--colors-tonal100);
    background-color: var(--colors-white);
  }

  .c-kjnYYX:not([disabled]):hover {
    border-color: var(--colors-tonal400);
    background-color: var(--colors-tonal50);
  }

  .c-kjnYYX:not([disabled]):active {
    border-color: var(--colors-primary);
    background-color: var(--colors-tonal100);
  }

  .c-kjnYYX:focus {
    box-shadow: 0px 0px 0px 3px #1D6FF5, 0px 0px 0px 2px #FFFFFF;
  }

  .c-kjnYYX[disabled] {
    opacity: 30%;
  }

  .c-kjnYYX {
    overflow: hidden;
    font-family: var(--fonts-body);
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-kjnYYX-cLvQgi-size-lg {
    font-size: var(--fontSizes-md);
    height: var(--sizes-5);
    width: var(--sizes-5);
  }

  .c-kjnYYX-kcTwYD-size-xs {
    font-size: var(--fontSizes-xs);
    height: var(--sizes-2);
    width: var(--sizes-2);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-PJLV-ieGSWOZ-css {
    position: relative;
    height: 100%;
    width: 100%;
  }

  .c-dbrbZt-ijmwTsZ-css {
    color: var(--colors-tonal400);
    height: 100%;
    width: 100%;
  }

  .c-dbrbZt-ildsiYK-css {
    color: var(--colors-tonal400);
  }
}

<div>
  <div
    class="c-dhzjXW c-kjnYYX c-kjnYYX-cLvQgi-size-lg c-dhzjXW-idGcKFW-css"
  >
    <div
      class="c-PJLV"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-ildsiYK-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 14v-4m-1-4H4v12h16zm-8 8v-4m-4 4v-4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar component renders an xs size with a fallback instead of an image 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kjnYYX {
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 2px solid var(--colors-tonal100);
    background-color: var(--colors-white);
  }

  .c-kjnYYX:not([disabled]):hover {
    border-color: var(--colors-tonal400);
    background-color: var(--colors-tonal50);
  }

  .c-kjnYYX:not([disabled]):active {
    border-color: var(--colors-primary);
    background-color: var(--colors-tonal100);
  }

  .c-kjnYYX:focus {
    box-shadow: 0px 0px 0px 3px #1D6FF5, 0px 0px 0px 2px #FFFFFF;
  }

  .c-kjnYYX[disabled] {
    opacity: 30%;
  }

  .c-kjnYYX {
    overflow: hidden;
    font-family: var(--fonts-body);
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-kjnYYX-cLvQgi-size-lg {
    font-size: var(--fontSizes-md);
    height: var(--sizes-5);
    width: var(--sizes-5);
  }

  .c-kjnYYX-kcTwYD-size-xs {
    font-size: var(--fontSizes-xs);
    height: var(--sizes-2);
    width: var(--sizes-2);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-PJLV-ieGSWOZ-css {
    position: relative;
    height: 100%;
    width: 100%;
  }

  .c-dbrbZt-ijmwTsZ-css {
    color: var(--colors-tonal400);
    height: 100%;
    width: 100%;
  }
}

<div>
  <div
    class="c-dhzjXW c-kjnYYX c-kjnYYX-kcTwYD-size-xs c-dhzjXW-idGcKFW-css"
  >
    <div
      class="c-PJLV c-PJLV-ieGSWOZ-css"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-ijmwTsZ-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 19.5c2.333-1 3.833-1.833 4.5-2.5 1-1-2-1-2-6 0-3.333 1.333-5 4-5s4 1.667 4 5c0 5-3 5-2 6 .667.667 2.167 1.5 4.5 2.5"
          stroke-linecap="round"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
    </div>
  </div>
</div>
`;
